Bug 10214 - TEVENT_SA_INFO_QUEUE_COUNT aio_pending_size mismatch
Summary: TEVENT_SA_INFO_QUEUE_COUNT aio_pending_size mismatch
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Stefan Metzmacher
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-17 09:55 UTC by Stefan Metzmacher
Modified: 2015-08-03 12:24 UTC (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2013-10-17 09:55:35 UTC
commit c97698e762b1ea8d7133f04ae822225676a6f135
Author: Jeremy Allison <jra@samba.org>
Date:   Thu Sep 3 07:38:21 2009 -0700

    Another part of the fix for bug 6651 - smbd SIGSEGV when breaking oplocks.
    SA_INFO_QUEUE_COUNT *MUST* be a power of 2, in order for the ring buffer
    wrap to work correctly at the 32 bit boundary. Thanks to Petr
    Vandrovec <petr@vandrovec.name> for this.

changed the SA_INFO_QUEUE_COUNT from 100 down to 64.

I think we should change TEVENT_SA_INFO_QUEUE_COUNT to 128 or even more,
and add a function to ask for this limit.
Comment 1 Stefan Metzmacher 2015-08-03 12:24:21 UTC
This is fixed at least in the latest 4.2.3